--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "nfreear/pdf-export-test",
 
-  "description": "Quickly test and compare 3 PHP PDF export libs. | © Nick Freear.",
+  "description": "Test 3 PHP PDF-export libs & compare with browser. | © Nick Freear.",
 
   "license": "proprietary",
 
